# maximous

./: .mcp.json  Cargo.toml  LICENSE  README.md
.claude-plugin/: plugin.json
commands/: dashboard.md
docs/superpowers/plans/: 2026-03-10-claude-mem-features-integration.md  2026-03-10-maximous-plan.md  2026-03-11-teams-tickets-launcher-plan.md
docs/superpowers/specs/: 2026-03-11-teams-tickets-launcher-design.md
hooks/: hooks.json
plugin/: plugin.json
scripts/: ensure-db.sh  install.sh
skills/launch-listener/: SKILL.md
skills/memory/: SKILL.md
skills/session-continuity/: SKILL.md
src/: db.rs  lib.rs  main.rs  mcp.rs  schema.sql
src/tools/: agents.rs  changes.rs  launches.rs  memory.rs  messages.rs  mod.rs  sessions.rs  tasks.rs  teams.rs  tickets.rs
src/web/: api.rs  mod.rs
tests/: db_test.rs  launches_test.rs  mcp_test.rs  memory_test.rs  messages_test.rs  observation_test.rs  pagination_test.rs  privacy_test.rs  progressive_test.rs  sessions_test.rs  tasks_test.rs  team_tools_test.rs  tickets_test.rs
web/: app.js  index.html  style.css
