[package]
name = "maximous"
version = "0.1.0"
edition = "2021"
description = "Lightweight SQLite brain for multi-agent orchestration"
license = "MIT"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
