[package]
name = "maximous"
version = "0.9.0"
edition = "2021"
description = "SQLite brain for Claude Code — session continuity, subagent knowledge persistence, multi-instance awareness, FTS5 search, typed observations, and web dashboard"
license = "MIT"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
rust-embed = "8"
async-stream = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
